--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
 @import 'libs/bootstrap-reboot.min';
 
@@ -5,7 +6,7 @@
 @import 'base/mixins';
 
 * {
-    font-family: "Fira Sans", Sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -22,16 +23,24 @@ body {
     position: relative;
 }
 
+a {
+    color: #fff;
+    text-decoration: none;
+    &:hover{
+        color: $orange;
+    }
+}
+
 // Стили блоков:
 
-// @import 'block';
-// @import 'block';
-// @import 'block';
-// @import 'block';
+@import 'blocks/header/header';
+@import 'blocks/menu/menu';
+@import 'blocks/buttons/buttons';
+// @import 'blocks';
 
 // Адаптация:
 
-// @import 'block';
-// @import 'block';
-// @import 'block';
-// @import 'block';
+@import 'blocks/header/header-media';
+@import 'blocks/menu/menu-media';
+@import 'blocks/buttons/buttons-media';
+// @import 'blocks';
