--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -36,6 +36,17 @@ a {
 @import 'blocks/header/header';
 @import 'blocks/menu/menu';
 @import 'blocks/buttons/buttons';
+@import 'blocks/request/request';
+@import 'blocks/forma/forma';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
 // @import 'blocks';
 
 // Адаптация:
@@ -43,4 +54,15 @@ a {
 @import 'blocks/header/header-media';
 @import 'blocks/menu/menu-media';
 @import 'blocks/buttons/buttons-media';
+@import 'blocks/request/request-media';
+@import 'blocks/forma/forma-media';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
+// @import 'blocks';
 // @import 'blocks';
