--- a/src/sass/blocks/buttons/_buttons.scss
+++ b/src/sass/blocks/buttons/_buttons.scss
@@ -2,11 +2,23 @@
     background-color: rgb(21, 29, 195);
     padding: 5px 9px 5px 9px;
     border-radius: 10px;
+    font-weight: 700;
+    text-transform: uppercase;
     &_header {
         padding: 5px;
-        font-weight: 700;
+        width: 200px;
+        text-align: center;
         &-green {
             background-color: $green;
         }
+    }
+    &_forma {
+        width: 120px;
+        text-transform: none;
+        background-color: #fff;
+        border: none;
+        border-radius: unset;
+        font-weight: 500;
+        padding: 5px 20px 5px 20px;
     }
 }
