--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -22,3 +22,27 @@
         padding: 5px 20px 5px 20px;
     }
 }
+
+@media (max-width: 1200px) {
+
+}
+
+@media (max-width: 992px) {
+    .button {
+        &_menu {
+            text-transform: unset;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .button {
+        &_menu {
+            background-color: unset;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+
+}
