--- a/src/sass/blocks/_forma.scss
+++ b/src/sass/blocks/_forma.scss
@@ -18,9 +18,10 @@
         z-index: 2;
     }
     &__block {
-            z-index: 2;
-            margin-top: 50px;
-            transform: translateX(24%);
+        z-index: 2;
+        margin-top: 50px;
+        align-self: flex-end;
+        margin-right: 80px;
     }
     &__check {
         &-text {
@@ -69,4 +70,64 @@ textarea {
     padding: 5px;
     outline: none;
     font-size: 15px;
+}
+
+@media (max-width: 992px) {
+    .forma {
+        &__block {
+            align-self: unset;
+            margin-right: 0;
+            margin-left: 60px;
+            margin-bottom: 10px;
+        }
+        &__button {
+            position: unset;
+        }
+        &__check-text {
+            margin-top: 0;
+        }
+    }
+    textarea {
+        width: 50%;
+        margin-bottom: 10px;
+        min-height: 70px;
+    }
+}
+
+@media (max-width: 768px) {
+
+}
+
+@media (max-width: 576px) {
+    form {
+        margin-left: 0;
+        margin-bottom: 30px;
+    }
+    .forma {
+        &__img {
+            width: 320px;
+            display: none;
+        }
+        &__block {
+            color: #fff;
+            margin-left: unset;
+            margin: 20px 0 20px 0;
+            text-align: center;
+        }
+        &__title {
+            font-size: 30px;
+        }
+        &__subtitle {
+            font-size: 25px;
+        }
+    }
+    input {
+        width: 100%;
+        font-size: 20px;
+    }
+    textarea {
+        width: 100%;
+        font-size: 20px;
+        height: 150px;
+    }
 }
