--- a/src/sass/blocks/_request.scss
+++ b/src/sass/blocks/_request.scss
@@ -1,5 +1,8 @@
 .request {
     background: url(https://static.wixstatic.com/media/6282e125651246cf8362f57d8d5a9b67.jpg_srz_2264_378_85_22_0.50_1.20_0.00_jpg_srz)no-repeat 50%/cover;
+    margin-bottom: 30px;
+    position: relative;
+    z-index: 1;
     &__grid {
         display: grid;
         grid: 1fr / repeat(2, 1fr);
@@ -33,4 +36,20 @@
         font-weight: 700;
         text-align: center;
     }
+}
+
+@media (max-width: 992px) {
+    .request {
+        &__grid {
+            grid: 1fr / 1fr;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+}
+
+@media (max-width: 576px) {
+
 }
