--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -31,33 +31,20 @@ a {
     }
 }
 
+ul {
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
 // Стили блоков:
 
-@import 'blocks/header/header';
-@import 'blocks/menu/menu';
-@import 'blocks/buttons/buttons';
-@import 'blocks/request/request';
-@import 'blocks/forma/forma';
-// @import 'blocks';
-// @import 'blocks';
-// @import 'blocks';
-// @import 'blocks';
-// @import 'blocks';
-// @import 'blocks';
-// @import 'blocks';
-// @import 'blocks';
-// @import 'blocks';
-// @import 'blocks';
-
-// Адаптация:
-
-@import 'blocks/header/header-media';
-@import 'blocks/menu/menu-media';
-@import 'blocks/buttons/buttons-media';
-@import 'blocks/request/request-media';
-@import 'blocks/forma/forma-media';
-// @import 'blocks';
-// @import 'blocks';
+@import 'blocks/header';
+@import 'blocks/menu';
+@import 'blocks/buttons';
+@import 'blocks/request';
+@import 'blocks/forma';
+@import 'blocks/serv-list';
+@import 'blocks/hamburger';
 // @import 'blocks';
 // @import 'blocks';
 // @import 'blocks';
