--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -7,6 +7,11 @@ ul.menu {
 li.menu__item {
     list-style-type: none;
 }
+@media (max-width: 992px) {
+    ul.menu {
+        gap: 2px;
+    }
+}
 
 @media (max-width: 768px) {
     ul.menu {
