--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -50,6 +50,6 @@ ul {
 @import 'blocks/price';
 @import 'blocks/video';
 @import 'blocks/slogan';
-// @import 'blocks';
+@import 'blocks/advantage';
 // @import 'blocks';
 // @import 'blocks';
