сделал секцию преимуещства

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -36,6 +36,13 @@ ul {
     margin-bottom: 0 !important;
 }
 
+.title {
+    font-size: 40px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
 // Стили блоков:
 
 @import 'blocks/header';
