--- a/src/sass/blocks/_advantage.scss
+++ b/src/sass/blocks/_advantage.scss
@@ -1,4 +1,35 @@
-.advantage {
+.advantage-items {
+    margin: 30px 0;
+    &__block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__img {
+        width: 150px;
+        margin-bottom: 15px;
+    }
+    &__text {
+        text-align: center;
+        text-transform: uppercase;
+        color: $orange;
+        font-weight: 700;
+        font-size: 20px;
+    }
+}
+
+.advantage-slogan {
+    margin: 10px 0 30px 0;
+    text-transform: uppercase;
+    font-size: 20px;
+    padding: 10px 0;
+    text-align: justify;
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+    font-weight: 600;
+}
+
+.advantage-slider {
     position: relative;
     z-index: 1;
     margin: 20px;
@@ -6,17 +37,26 @@
         background-color: #fff;
         border-radius: 100%;
         height: 250px;
-        padding: 15px;
+        padding: 20px;
         text-align: center;
+        position: relative;
     }
     &__text {
         text-transform: uppercase;
         color: $orange;
-        transform: translateY(50%);
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto 0;
+        transform: translateX(-9px);
+        height: 100px;
     }
 }
 .my-slider {
     position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 35px;
 }
 .prev, .next {
     outline: none;
@@ -30,4 +70,34 @@
 }
 .next {
     right: -20px;
+}
+
+@media (max-width: 992px) {
+    .advantage-slider {
+        &__block {
+            height: 300px;
+            padding: 20px;
+        }
+    }
+    .advantage-items {
+        &__block {
+            margin-bottom: 20px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .advantage-items {
+        &__block {
+            margin-bottom: 40px;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .advantage-slider {
+        &__text {
+            font-size: 20px;
+        }
+    }
 }
