--- a/src/sass/blocks/_slogan.scss
+++ b/src/sass/blocks/_slogan.scss
@@ -1,5 +1,6 @@
 .slogan {
     margin-bottom: 30px;
+    padding: 0 12px;
     &__wrapper {
         background-color: $blue;
         border-radius: 5px;
