--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,3 +1,7 @@
+button {
+    border: unset;
+}
+
 .button {
     background-color: rgb(21, 29, 195);
     padding: 5px 9px 5px 9px;
@@ -33,6 +37,18 @@
         border: none;
         font-size: 20px;
         letter-spacing: 1px;
+    }
+    &_port {
+        background-color: unset;
+        display: block;
+        margin: 0 auto;
+        box-shadow: 0px 0px 18px 10px rgba(0, 0, 0, 0.13);
+        padding: 5px 30px 5px 30px;
+        transition: .5s all;
+        margin-bottom: 40px;
+        &:hover {
+            transform: scale(98%);
+        }
     }
 }
 
